<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Animal weight"</string>
    <string name="exit">Exit</string>
    <string name="title_pig">Pig</string>
    <string name="title_cow">Cow</string>
    <string name="title_calves">Calves</string>
    <string name="title_storage">Storage</string>
    <string name="title_info">Info</string>
    <string name="body_length">Body\nlength</string>
    <string name="bust">Bust</string>
    <string name="weight">Weight =</string>
    <string name="save">Save</string>
    <string name="count">Count</string>
    <string name="text1_info_ru">
        \t In terms of individual farms is often not possible to determine the live weight of large animals by weighing, or need to make a rapid measurement during the growth process.\n
        \t Described method of determining the weight cannot guarantee high precision, and very different for each breed of cows and pigs.
        For accurate weighing it is recommended to use electronic scales for weighing animals.\n
        \t To determine the approximate live weight can be using this program, for which source data are the measurements of the animals.\n
        \t For taking the measurements necessary to put the animal: the legs should be vertical, head to the back..
        Take measurements with measuring tape, in the morning before feeding.\n
        \t The cow and calf measure oblique length of the body (from humeroscapular joint to the root of tail) and chest girth behind the shoulder blades.\n\n
        <b>The scheme of measurements of the cow and calf</b></string>
    <string name="text2_info_ru">
        \t Pigs to measure the body length from tail root to the occipital crest and the chest girth behind the shoulder blades. Measure the pig for 2-3 hours before the daily feeding. \n\n
        <b>The scheme of measurements in pigs</b></string>
     <string name="text3_info_ru">
        \t Having obtained these measurements, in the corresponding section of this program enter the values and get an approximate live weight of the animal.</string>

    <string name="title_item_group_pigs">Pigs</string>
    <string name="title_item_group_cows">Cows</string>
    <string name="title_item_group_calves">Calves</string>

    <string name="weight_count">Weight =</string>
    <string name="kg">kg.</string>
    <string name="weight_is_not_known">Weight is not known</string>
    <string name="weight_saved">Saved</string>
    <string name="error">Error</string>
    <string name="weight_is_not_calculated">Weight is not calculated</string>
    <string name="deleted">Deleted</string>

    <string name="action_settings">Settings</string>
</resources>
