<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/background_for_app">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center">

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/back"
                android:onClick="onClick"
                android:background="@drawable/ic_back"
                android:gravity="center"
                android:layout_gravity="left|top" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_info"
                android:id="@+id/textView10"
                android:layout_gravity="center"
                android:textSize="18dp"
                android:textColor="#ff1c2edd"
                android:background="@drawable/backround_title"
                android:gravity="center"
                android:padding="5dp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="50dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/scrollView" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|top">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView4"
                            android:singleLine="false"
                            android:text="@string/text1_info_ru"
                            android:textColor="#ff000000" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageView"
                            android:src="@drawable/im_cow_info" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView5"
                            android:text="@string/text2_info_ru"
                            android:textColor="#ff000000" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageView2"
                            android:src="@drawable/im_pig_info" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView7"
                            android:singleLine="false"
                            android:text="@string/text3_info_ru"
                            android:textColor="#ff000000" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

        </FrameLayout>
    </FrameLayout>
</RelativeLayout>
