<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/background_for_app">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/buttonInfo"
                android:layout_gravity="right|top"
                android:background="@drawable/ic_info"
                android:onClick="onClick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_gravity="center"
                android:textSize="18dp"
                android:textColor="#ff1c2edd"
                android:background="@drawable/backround_title"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/title_cow" />

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/buttonSave"
                android:onClick="onClick"
                android:background="@drawable/ic_save"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="45dp" />

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/buttonBack"
                android:onClick="onClick"
                android:background="@drawable/ic_back"
                android:layout_gravity="left|center_vertical" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical">

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/imageCow"
                        android:layout_weight="1"
                        android:background="@drawable/im_cow"
                        android:focusableInTouchMode="false" />

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_gravity="left|top">

                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="fill_parent"
                                android:layout_height="match_parent">

                                <LinearLayout
                                    android:orientation="vertical"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_weight="1">

                                    <LinearLayout
                                        android:orientation="horizontal"
                                        android:layout_width="fill_parent"
                                        android:layout_height="2dp"
                                        android:gravity="center"
                                        android:background="#ff1521b8"
                                        android:layout_marginTop="5dp">

                                    </LinearLayout>

                                    <LinearLayout
                                        android:orientation="horizontal"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_gravity="center_horizontal"
                                        android:gravity="center"
                                        android:onClick="onClick"
                                        android:focusable="false"
                                        android:id="@+id/linerLayout"
                                        android:layout_marginTop="5dp">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/body_length"
                                            android:focusable="false"
                                            android:id="@+id/textView3"
                                            android:layout_marginRight="5dp"
                                            android:textColor="#ff000000" />

                                        <NumberPicker
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:id="@+id/numberPicker1"
                                            android:layout_gravity="center_vertical"
                                            android:layout_marginRight="10dp"
                                            android:focusable="false"
                                            android:longClickable="false"
                                            android:background="@drawable/backround_number_picker"
                                            android:orientation="vertical" />

                                        <NumberPicker
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:id="@+id/numberPicker2"
                                            android:longClickable="false"
                                            android:focusable="false"
                                            android:layout_marginLeft="10dp"
                                            android:background="@drawable/backround_number_picker" />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:focusable="false"
                                            android:text="@string/bust"
                                            android:id="@+id/textView6"
                                            android:layout_marginLeft="10dp"
                                            android:textColor="#ff000000" />
                                    </LinearLayout>

                                </LinearLayout>

                                <LinearLayout
                                    android:orientation="vertical"
                                    android:layout_width="match_parent"
                                    android:layout_height="40dp"
                                    android:layout_gravity="center_horizontal"
                                    android:gravity="center"
                                    >

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/weight"
                                        android:id="@+id/textViewWeight"
                                        android:layout_gravity="center_horizontal"
                                        android:textSize="20dp"
                                        android:textColor="#fff50e0e" />
                                </LinearLayout>

                                <LinearLayout
                                    android:orientation="vertical"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center_vertical"
                                    android:layout_weight="2"
                                    android:gravity="center">

                                    <LinearLayout
                                        android:orientation="horizontal"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_gravity="center_vertical"
                                        android:gravity="center">

                                        <Button
                                            android:layout_width="fill_parent"
                                            android:layout_height="40dp"
                                            android:text="@string/save"
                                            android:id="@+id/buttonSaveWeight"
                                            android:layout_weight="1"
                                            android:onClick="onClick"
                                            android:layout_gravity="center_vertical"
                                            android:layout_marginRight="5dp"
                                            android:layout_marginLeft="5dp"
                                            android:background="@drawable/button_exit_backround" />

                                        <Button
                                            android:layout_width="match_parent"
                                            android:layout_height="40dp"
                                            android:text="@string/count"
                                            android:id="@+id/buttonCount"
                                            android:layout_weight="1"
                                            android:onClick="onClick"
                                            android:layout_gravity="center_vertical"
                                            android:layout_marginLeft="5dp"
                                            android:layout_marginRight="5dp"
                                            android:background="@drawable/button_exit_backround" />
                                    </LinearLayout>
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>
                    </FrameLayout>

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>
    </FrameLayout>
</RelativeLayout>
